--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "My template package for projects",
   "main": "./src/index.jsx",
+  "pre-commit": [
+    "npm run lint",
+    "test"
+  ],
   "dependencies": {
     "@babel/preset-typescript": "^7.12.7",
     "@babel/runtime": "^7.12.5",
@@ -29,7 +33,7 @@
     "build": "npx wp",
     "lint": "npx eslint ./src",
     "lintfix": "npx eslint ./src --fix",
-    "pretest": "npm run lint"
+    "pre-commit": "npm run lint"
   },
   "browserslist": {
     "production": [
