--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "description": "My template package for projects",
   "main": "./src/index.jsx",
-  "pre-commit": [
-    "npm run lint",
-    "test"
-  ],
   "dependencies": {
     "@babel/preset-typescript": "^7.12.7",
     "@babel/runtime": "^7.12.5",
@@ -35,6 +31,10 @@
     "lintfix": "npx eslint ./src --fix",
     "pre-commit": "npm run lint"
   },
+  "pre-commit": [
+    "lint",
+    "test"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
@@ -77,6 +77,7 @@
     "fork-ts-checker-webpack-plugin": "^6.0.4",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
+    "pre-commit": "^1.2.2",
     "react-refresh": "^0.9.0",
     "react-test-renderer": "^17.0.1",
     "source-map-loader": "^1.1.2",
