--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.12.7",
     "@babel/runtime": "^7.12.5",
+    "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/user-event": "^12.2.2",
     "@types/react": "^17.0.0",
     "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
     "axios": "^0.21.0",
     "i18next": "^19.8.4",
     "react": "^17.0.1",
@@ -19,8 +22,11 @@
     "react-i18next": "^11.7.3",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-style-reset": "^1.3.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
     "webpack": "^5.8.0",
     "webpack-dev-server": "^3.11.0"
   },
@@ -61,6 +67,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.12.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^5.0.1",
