--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-redux-ts-webpack-jest-template",
+  "name": "bookpinion",
   "version": "0.1.0",
-  "description": "My template package for projects",
+  "description": "My first ts project",
   "main": "./src/index.jsx",
   "dependencies": {
     "@babel/preset-typescript": "^7.12.7",
@@ -19,11 +19,12 @@
     "i18next": "^19.8.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-i18next": "^11.7.3",
+    "react-i18next": "^11.7.4",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-style-reset": "^1.3.2",
+    "react-touch-ripple": "^0.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
@@ -35,7 +36,8 @@
     "build": "npx wp",
     "lint": "npx eslint ./src",
     "lintfix": "npx eslint ./src --fix",
-    "pre-commit": "npm run lint"
+    "pre-commit": "npm run lint",
+    "lint:css": "stylelint './src/**/*.tsx'"
   },
   "pre-commit": [
     "lint",
@@ -89,6 +91,10 @@
     "react-test-renderer": "^17.0.1",
     "source-map-loader": "^1.1.2",
     "style-loader": "^2.0.0",
+    "stylelint": "^13.8.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "type-fest": "^0.20.2",
     "typescript": "^4.1.2",
     "webpack-nano": "^1.1.1",
