--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "fp-ts": "^2.9.1",
     "i18next": "^19.8.4",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.7.4",
@@ -30,6 +32,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
+    "validator": "^13.5.2",
     "webpack": "^5.8.0",
     "webpack-dev-server": "^3.11.0"
   },
@@ -65,6 +68,8 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@testing-library/react": "^11.2.2",
     "@tsconfig/node12": "^1.0.7",
+    "@types/lodash": "^4.14.165",
+    "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "babel-core": "^6.26.3",
