--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "es2019",
       "es2020.promise",
       "es2020.bigint",
-      "es2020.string"
+      "es2020.string",
     ],
     "module": "commonjs",
     "target": "es2019",
