--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-touch-ripple": "^0.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.2.1",
     "validator": "^13.5.2",
     "webpack": "^5.8.0",
