--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "axios": "^0.21.0",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
     "fp-ts": "^2.9.1",
     "i18next": "^19.8.4",
     "lodash": "^4.17.20",
@@ -28,14 +26,12 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-style-reset": "^1.3.2",
-    "react-touch-ripple": "^0.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.1",
     "validator": "^13.5.2",
-    "webpack": "^5.8.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.8.0"
   },
   "scripts": {
     "test": "jest",
@@ -104,7 +100,6 @@
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "type-fest": "^0.20.2",
     "typescript": "^4.1.2",
     "webpack-nano": "^1.1.1",
     "webpack-plugin-serve": "^1.2.1"
