--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "@babel/runtime": "^7.12.5",
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
-    "@reduxjs/toolkit": "^1.4.0",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/user-event": "^12.2.2",
     "@types/react": "^17.0.0",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "fp-ts": "^2.9.1",
     "i18next": "^19.8.4",
     "lodash": "^4.17.20",
@@ -92,6 +92,7 @@
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "pre-commit": "^1.2.2",
+    "process": "^0.11.10",
     "react-refresh": "^0.9.0",
     "react-test-renderer": "^17.0.1",
     "source-map-loader": "^1.1.2",
